--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <br>
                 Score: <span id="score">0</span>
             </h2>  
+            <button id="starter" class="start">Start</button>
         </div>  
     </header>
     
